# raytracing_optical_fiber

./: .gitmodules  CMakeLists.txt  Presentatie_Geavanceerd_digitaal_ontwerp_KlaasMeersman_DaanVercammen.pptx  density.py
display_ray/: CMakeLists.txt  density  3D .py  density.py  display.py  rays.csv
our_app/: coordinate.cpp  coordinate.hpp  fiber.cpp  fiber.hpp  makefile  qbRay  ray.cpp  ray.hpp
plot/: data.txt  plot.py
setup/: followed_links.md  klaastest.txt
src/: coordinate.cpp  coordinate.hpp  fiber.cpp  fiber.hpp  main.cpp  ray.cpp  ray.hpp
srcGPU/: coordinate.hpp  fiber.cu  fiber.hpp  main.cu  ray.cu  ray.hpp
